syntax = "proto3";

package v2ray.core.common.protocol;
option csharp_namespace = "V2Ray.Core.Common.Protocol";
option go_package = "github.com/ghxhy/v2ray-core/v5/common/protocol";
option java_package = "com.v2ray.core.common.protocol";
option java_multiple_files = true;

import "common/net/address.proto";
import "common/protocol/user.proto";

message ServerEndpoint {
  v2ray.core.common.net.IPOrDomain address = 1;
  uint32 port = 2;
  repeated v2ray.core.common.protocol.User user = 3;
}
